src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Rubro_de_empleador__c</fullName>
        <label>Rubro de empleador</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>5</fullName>
                    <label>COMERCIO</label>
                </value>
                <value>
                    <fullName>12</fullName>
                    <label>COMUNICACIONES</label>
                </value>
                <value>
                    <fullName>11</fullName>
                    <label>CONSTRUCCIÓN</label>
                </value>
                <value>
                    <fullName>10</fullName>
                    <label>ELECTRICIDAD, GAS Y AGUA</label>
                </value>
                <value>
                    <fullName>9</fullName>
                    <label>ENERGÍA</label>
                </value>
                <value>
                    <fullName>14</fullName>
                    <label>ENTIDADES FISCALES</label>
                </value>
                <value>
                    <fullName>7</fullName>
                    <label>MANUFACTURA</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>MINERÍA</label>
                </value>
                <value>
                    <fullName>1</fullName>
                    <label>PESCA</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>PRENSA</label>
                </value>
                <value>
                    <fullName>8</fullName>
                    <label>SERVICIOS</label>
                </value>
                <value>
                    <fullName>13</fullName>
                    <label>SERVICIOS FINANCIEROS</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>TEXTIL</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <label>TRANSPORTE</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Saldo_precio__c</fullName>
        <formula>Precio_vehiculo__c - (Pie__c + Monto_retoma__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Saldo precio</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Situaci_n_Laboral__c</fullName>
        <label>Situación Laboral</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solicitud_Origen__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Solicitud Origen</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subetapa__c</fullName>
        <label>Subetapa</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Problema de retoma</fullName>
                </value>
                <value>
                    <fullName>Reagenda</fullName>
                </value>
                <value>
                    <fullName>Sin Stock</fullName>
                </value>
                <value>
                    <fullName>Mantiene Unidad</fullName>
                </value>
                <value>
                    <fullName>No califica renovación</fullName>
                </value>
                <value>
                    <fullName>Acepta propuesta</fullName>
                </value>
                <value>
                    <fullName>Renovado</fullName>
                </value>
                <value>
                    <fullName>Refinanciado</fullName>
                </value>
                <value>
                    <fullName>Pago Cuotón</fullName>
                </value>
                <value>
                    <fullName>Rechazado</fullName>
                </value>
                <value>
                    <fullName>Fuga</fullName>
                </value>
                <value>
                    <fullName>Inubicable</fullName>
                </value>
                <value>
                    <fullName>Renegocia</fullName>
                </value>
                <value>
                    <fullName>Cobranza Cuotón</fullName>
                </value>
                <value>
                    <fullName>Prepagado</fullName>
                </value>
                <value>
                    <fullName>Cambia Marca</fullName>
                </value>
                <value>
                    <fullName>Vendió Unidad</fullName>
                </value>
                <value>
                    <fullName>Fuga Refinanciamiento</fullName>
                </value>
                <value>
                    <fullName>Fuga Importador</fullName>
                </value>
                <value>
                    <fullName>Fuga Canal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sueldo_liquido__c</fullName>
        <label>Sueldo liquido</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tasa__c</fullName>
        <label>Tasa</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Tasa_dealer__c</fullName>
        <label>Tasa dealer</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Telefono_empleador__c</fullName>
        <label>Teléfono empleador</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Telefono_empleador_anterior__c</fullName>
        <label>Teléfono empleador anterior</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Tipo_Cr_dito__c</fullName>
        <label>Tipo Crédito</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipo_cuenta_1__c</fullName>
        <label>Tipo de cuenta 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Tipo_de_cuenta</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_de_Producto__c</fullName>
        <label>Tipo de Producto</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Opción inteligente</fullName>
                </value>
                <value>
                    <fullName>Crédito convencional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_de_Veh_culo__c</fullName>
        <label>Tipo de Vehículo</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Nuevo</fullName>
                </value>
                <value>
                    <fullName>Usado</fullName>
                </value>
                <value>
                    <fullName>NU</fullName>
                    <label>Particular Nuevo</label>
                </value>
                <value>
                    <fullName>NP</fullName>
                    <label>Comercial Nuevo</label>
                </value>
                <value>
                    <fullName>US</fullName>
                    <label>Particular Usado</label>
                </value>
                <value>
                    <fullName>UP</fullName>
                    <label>Comercial Usado</label>
                </value>
                <value>
                    <fullName>NM</fullName>
                    <label>Maquinaria Pesada Nuevas</label>
                </value>
                <value>
                    <fullName>UM</fullName>
                    <label>Maquinaria Pesada Usadas</label>
                </value>
                <value>
                    <fullName>NT</fullName>
                    <label>Motos Nuevas</label>
                </value>
                <value>
                    <fullName>UT</fullName>
                    <label>Motos Usadas</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_de_actividad__c</fullName>
        <label>Tipo de actividad</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Tipo_de_actividad</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_de_contrato__c</fullName>
        <label>Tipo de contrato</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DE</fullName>
                    <label>Fijo</label>
                </value>
                <value>
                    <fullName>IN</fullName>
                    <label>Indefinido</label>
                </value>
                <value>
                    <fullName>CN</fullName>
                    <label>Contrata</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_de_cuenta_2__c</fullName>
        <label>Tipo de cuenta 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Tipo_de_cuenta</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_de_financiamiento__c</fullName>
        <label>Tipo de financiamiento</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Tipo_de_financiamiento</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_de_renta__c</fullName>
        <label>Tipo de renta</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FI</fullName>
                    <label>FIJA</label>
                </value>
                <value>
                    <fullName>VA</fullName>
                    <label>VARIABLE</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_de_residencia__c</fullName>
        <label>Tipo de residencia</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>PROPIA SIN DEUDA</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>PROPIA CON DEUDA</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>ARRENDADA</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>VIVE CON FAMILIARES</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>VIVE CON PADRES</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <label>FISCAL O EMPRESA</label>
                </value>
                <value>
                    <fullName>Propia</fullName>
                    <isActive>false</isActive>
                    <label>Propia</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_de_tasa__c</fullName>
        <label>Tipo de tasa</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Tipo_de_tasa</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_de_trabajador__c</fullName>
        <label>Tipo de trabajador</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DE</fullName>
                    <label>Dependiente</label>
                </value>
                <value>
                    <fullName>IN</fullName>
                    <label>Independiente</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_retoma__c</fullName>
        <label>Tipo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                    <label>Particular Usado</label>
                </value>
                <value>
                    <fullName>UP</fullName>
                    <label>Comercial Usado</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Toma__c</fullName>
        <label>Toma</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_a_financiar__c</fullName>
        <label>Total a financiar</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ultima_cuota__c</fullName>
        <label>Última cuota</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ValidaConyuge__c</fullName>
        <label>ValidaConyuge</label>
        <summaryFilterItems>
            <field>Relacion__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Conyuge</value>
        </summaryFilterItems>
        <summaryForeignKey>Relacion__c.Solicitud__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ValidaImpuestos__c</fullName>
        <label>ValidaImpuestos</label>
        <summaryForeignKey>Impuesto__c.Solicitud__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ValidaReferencias__c</fullName>
        <label>ValidaReferencias</label>
        <summaryFilterItems>
            <field>Relacion__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Referencia</value>
        </summaryFilterItems>
        <summaryForeignKey>Relacion__c.Solicitud__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ValidaSolicitudVenta__c</fullName>
        <formula>AND(
	RecordType.DeveloperName = &apos;Simulacion_CORE&apos;,
	OR(
		ISBLANK(Direccion__c),
		ISBLANK(TEXT(Regi_n__c)),
		ISBLANK(TEXT(Comuna__c)),
		ISBLANK(TEXT(Estado_civil__c)),
		ISBLANK(TEXT(Regimen_matrimonial__c)),
		ISBLANK(TEXT(Estudios__c)),
		ISBLANK(TEXT(Tipo_de_residencia__c)),
		ISBLANK(TEXT(Tipo_de_trabajador__c)),
		ISBLANK(TEXT(Tipo_de_actividad__c)),
		ISBLANK(Cargo__c),
		ISBLANK(Fecha_de_ingreso__c),
		ISBLANK(Empleador__c),
		ISBLANK(Direccion_empleador__c),
		ISBLANK(TEXT(Rubro_de_empleador__c)),
		ISBLANK(TEXT(Region_empleador__c)),
		ISBLANK(TEXT(Comuna_empleador__c)),
		ISBLANK(Telefono_empleador__c),
		ISBLANK(TEXT(Tipo_de_contrato__c)),
		ISBLANK(Arriendo__c),
		ISBLANK(Dividendo__c)
	)
)</formula>
        <label>ValidaSolicitudVenta</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Validar_morosidad__c</fullName>
        <label>Validar morosidad</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Valor_Cuota__c</fullName>
        <label>Valor Cuota</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Valor_UF__c</fullName>
        <label>Valor UF</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vendedor__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Vendedor</label>
        <referenceTo>Vendedor__c</referenceTo>
        <relationshipLabel>Solicitudes</relationshipLabel>
        <relationshipName>Solicitudes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version_retoma__c</fullName>
        <label>Versión</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>id_credito_original__c</fullName>
        <formula>Cr_dito__r.Id_Credito__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Corresponde al ID del crédito original a renovar</inlineHelpText>
        <label>ID Crédito Ogirinal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>respuestaAPI__c</fullName>
        <label>respuestaAPI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>Copia_de_N06</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Locales__c</columns>
        <columns>Concesionarios__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>N__c</field>
            <operation>equals</operation>
            <value>6</value>
        </filters>
        <label>N06</label>
    </listViews>
    <listViews>
        <fullName>FILTROS</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>FILTROS AG</label>
        <sharedTo>
            <role>Importadores</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Mis_Solicitudes</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Mine</filterScope>
        <label>Mis Solicitudes</label>
    </listViews>
    <listViews>
        <fullName>N01</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Locales__c</columns>
        <columns>Concesionarios__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>N__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>N01</label>
    </listViews>
    <listViews>
        <fullName>N02</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Locales__c</columns>
        <columns>Concesionarios__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>N__c</field>
            <operation>equals</operation>
            <value>2</value>
        </filters>
        <label>N02</label>
    </listViews>
    <listViews>
        <fullName>N03</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Locales__c</columns>
        <columns>Concesionarios__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>N__c</field>
            <operation>equals</operation>
            <value>3</value>
        </filters>
        <label>N03</label>
    </listViews>
    <listViews>
        <fullName>N04</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Locales__c</columns>
        <columns>Concesionarios__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>N__c</field>
            <operation>equals</operation>
            <value>4</value>
        </filters>
        <label>N04</label>
    </listViews>
    <listViews>
        <fullName>N05</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Locales__c</columns>
        <columns>Concesionarios__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>N__c</field>
            <operation>equals</operation>
            <value>5</value>
        </filters>
        <label>N05</label>
    </listViews>
    <listViews>
        <fullName>N07</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Locales__c</columns>
        <columns>Concesionarios__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>N__c</field>
            <operation>equals</operation>
            <value>7</value>
        </filters>
        <label>N07</label>
    </listViews>
    <listViews>
        <fullName>N08</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Locales__c</columns>
        <columns>Concesionarios__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>N__c</field>
            <operation>equals</operation>
            <value>8</value>
        </filters>
        <label>N08</label>
    </listViews>
    <listViews>
        <fullName>N09</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Locales__c</columns>
        <columns>Concesionarios__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>N__c</field>
            <operation>equals</operation>
            <value>9</value>
        </filters>
        <label>N09</label>
    </listViews>
    <listViews>
        <fullName>N10</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Locales__c</columns>
        <columns>Concesionarios__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>N__c</field>
            <operation>equals</operation>
            <value>10</value>
        </filters>
        <label>N10</label>
    </listViews>
    <listViews>
        <fullName>N11</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Locales__c</columns>
        <columns>Concesionarios__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>N__c</field>
            <operation>equals</operation>
            <value>11</value>
        </filters>
        <label>N11</label>
    </listViews>
    <listViews>
        <fullName>N12</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Locales__c</columns>
        <columns>Concesionarios__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>N__c</field>
            <operation>equals</operation>
            <value>12</value>
        </filters>
        <label>N12</label>
    </listViews>
    <listViews>
        <fullName>N_ACTUAL</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Locales__c</columns>
        <columns>Concesionarios__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>N__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>N ACTUAL</label>
    </listViews>
    <recordTypes>
        <fullName>Lead_Web</fullName>
        <active>false</active>
        <businessProcess>Lead Web</businessProcess>
        <label>Lead Web</label>
    </recordTypes>
    <recordTypes>
        <fullName>Simulaci_n_de_cr_dito_Adjudicado</fullName>
        <active>true</active>
        <businessProcess>Simulación CORE</businessProcess>
        <label>Simulación de crédito Adjudicado</label>
    </recordTypes>
    <recordTypes>
        <fullName>Simulacion_CORE</fullName>
        <active>true</active>
        <businessProcess>Simulación CORE</businessProcess>
        <label>Simulación de crédito</label>
    </recordTypes>
    <recordTypes>
        <fullName>Simulacion_de_credito_Empresa</fullName>
        <active>true</active>
        <businessProcess>Simulación CORE</businessProcess>
        <label>Simulación de crédito Empresa</label>
    </recordTypes>
    <recordTypes>
        <fullName>Simulacion_de_credito_V2</fullName>
        <active>true</active>
        <businessProcess>Simulación CORE</businessProcess>
        <label>Simulación de crédito V2</label>
    </recordTypes>
    <recordTypes>
        <fullName>Solicitud_Renovaciones</fullName>
        <active>true</active>
        <businessProcess>Renovación</businessProcess>
        <label>Solicitud Renovaciones</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>CambioDeMarca</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
	RecordType.DeveloperName = &apos;Solicitud_Renovaciones&apos;,
	ISCHANGED(Marca_vehiculo__c)
)</errorConditionFormula>
        <errorMessage>No puede cambiar la marca, debe generar una nueva solicitud.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NoCambiaEtapa</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
NOT(
OR (

ISPICKVAL( StageName , &quot;Envío a Evaluar&quot;),
ISPICKVAL(StageName, &quot;Formalización&quot;),
ISPICKVAL(StageName, &quot;Pre evaluación&quot;),
ISPICKVAL(StageName, &quot;Checklist&quot;))),

$Profile.Name &lt;&gt; &quot;Administrador del sistema&quot;,
$Profile.Name &lt;&gt; &quot;Integración&quot;)</errorConditionFormula>
        <errorMessage>No tiene permiso para seleccionar esta etapa</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Pre_Evaluacion_no_puede_avanzar_en_error</fullName>
        <active>false</active>
        <errorConditionFormula>AND(  PRIORVALUE( StageName ) = &apos;Pre evaluación&apos; ,  ISPICKVAL(StageName,&apos;Formalización&apos;), Respuesta_Servicio__c &lt;&gt; &apos;OK&apos;  )</errorConditionFormula>
        <errorMessage>No puede avanzar en la etapa porque se ha producido un error en la respuesta de servicio.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TasaSimulacion</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
RecordType.DeveloperName = &apos;Simulacion_CORE&apos;,
NOT( $Profile.Name = &apos;Integración&apos;),
Tasa__c &lt; Tasa_dealer__c
)</errorConditionFormula>
        <errorDisplayField>Tasa__c</errorDisplayField>
        <errorMessage>Tasa no puede ser menor a tasa dealer</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VENTA10_SeccionRetoma</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    RecordType.DeveloperName = &apos;Simulacion_CORE&apos;, 
    Monto_retoma__c &lt;&gt; 0,
    NOT( $Profile.Name = &apos;Integración&apos;),
    OR(
        ISBLANK(PPU_retoma__c),
        ISBLANK(TEXT(Marca_retoma__c)),
        ISBLANK(Modelo2_retoma__c),
        ISBLANK(Version_retoma__c),
        ISBLANK(Deuda_retoma__c),
        ISBLANK(TEXT(Tipo_retoma__c)),
        ISBLANK(Ano_retoma__c),
        ISBLANK(Precio_retoma__c),
        ISBLANK(Kilometraje_retoma__c)
    )
)</errorConditionFormula>
        <errorMessage>Debe completar la información de retoma para continuar</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VENTA11_RemateFormalizadaOK</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    RecordType.DeveloperName = &apos;Simulacion_CORE&apos;,
    ISPICKVAL(StageName,&apos;Remate&apos;),
    PRIORVALUE(StageName)=&apos;Formalización&apos;,
    ISCHANGED(StageName),
    NOT( $Profile.Name = &apos;Integración&apos;),
    NOT(Formalizacion_OK__c)
)</errorConditionFormula>
        <errorMessage>Solicitud no formalizada</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VENTA12_RemateFinalizado</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    RecordType.DeveloperName = &apos;Simulacion_CORE&apos;, 
    PRIORVALUE(StageName)=&apos;Remate&apos;,
    ISCHANGED(StageName),
    NOT( $Profile.Name = &apos;Integración&apos;),
    NOT(Remate_finalizado__c)
)</errorConditionFormula>
        <errorMessage>Remate no ha finalizado, no puede cambiar de etapa</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VENTA13_SolicitudFormalizadaSinCoreId</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    RecordType.DeveloperName = &apos;Simulacion_CORE&apos;, 
    ISPICKVAL(StageName,&apos;Formalización&apos;),
    ISCHANGED(StageName),
    NOT( $Profile.Name = &apos;Integración&apos;),
    ISBLANK(Id_Solicitud__c)
)</errorConditionFormula>
        <errorMessage>No puede continuar sin Id de solicitud, favor verifique la respuesta de servicio.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VENTA1_SeccionSolicitudFormalizada</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    RecordType.DeveloperName = &apos;Simulacion_CORE&apos;, 
    ISPICKVAL(StageName,&apos;Formalización&apos;),
    ISCHANGED(StageName),
    NOT( $Profile.Name = &apos;Integración&apos;),
    OR(
        ISBLANK(TEXT(Estado_civil__c)),
        ISBLANK(TEXT(Regimen_matrimonial__c)),
        ISBLANK(TEXT(Estudios__c)),
        ISBLANK(TEXT(Tipo_de_residencia__c)),
        ISBLANK(Direccion__c),
        ISBLANK(TEXT(Regi_n__c)),
        ISBLANK(TEXT(Comuna__c)),
        ISBLANK(Profesion__c),
        ISBLANK(N_de_serie_C_I__c)
    )
)</errorConditionFormula>
        <errorMessage>Debe completar la información del cliente (Información del cliente e Información personal) para continuar</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VENTA2_SeccionInformacionLaboral</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    RecordType.DeveloperName = &apos;Simulacion_CORE&apos;, 
    ISPICKVAL(StageName,&apos;Formalización&apos;),
    ISCHANGED(StageName),
    ISPICKVAL(Tipo_de_trabajador__c,&apos;DE&apos;),
    NOT( $Profile.Name = &apos;Integración&apos;),
    OR(
        ISBLANK(Empleador__c),
        ISBLANK(Fecha_de_ingreso__c),
        ISBLANK(RUT_empleador__c),
        ISBLANK(Cargo__c),
        ISBLANK(TEXT(Rubro_de_empleador__c)),
        ISBLANK(Direccion_empleador__c),
        ISBLANK(TEXT(Region_empleador__c)),
        ISBLANK(TEXT(Comuna_empleador__c)),
        ISBLANK(TEXT(Tipo_de_actividad__c)),
        ISBLANK(Telefono_empleador__c)
    )
)</errorConditionFormula>
        <errorMessage>Debe completar los datos de la sección &quot;Información laboral&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VENTA3_SeccionIngresosEgresos</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    RecordType.DeveloperName = &apos;Simulacion_CORE&apos;, 
    ISPICKVAL(StageName,&apos;Formalización&apos;),
    ISCHANGED(StageName),
    NOT( $Profile.Name = &apos;Integración&apos;),
    OR(
	    ISBLANK(TEXT(Tipo_de_contrato__c)),
        ISBLANK(TEXT(Tipo_de_renta__c)),
	    ISBLANK(Renta__c),
	    ISBLANK(Otros_ingresos__c),
	    ISBLANK(Arriendo__c),
	    ISBLANK(Dividendo__c),
	    ISBLANK(Otros_egresos__c)
	)
)</errorConditionFormula>
        <errorMessage>Debe completar los datos de la sección &quot;Ingresos/Egresos&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VENTA4_SeccionDatosBancarios</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    RecordType.DeveloperName = &apos;Simulacion_CORE&apos;, 
    ISPICKVAL(StageName,&apos;Formalización&apos;),
    ISCHANGED(StageName),
    NOT( $Profile.Name = &apos;Integración&apos;),
    OR(
        ISBLANK(TEXT(Banco_cuenta_1__c)),
	    ISBLANK(Numero_cuenta_1__c),
	    ISBLANK(TEXT(Tipo_cuenta_1__c))
	)
)</errorConditionFormula>
        <errorMessage>Debe registrar al menos un dato bancario, en la sección &quot;Información bancaria&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VENTA5_ValidaEtapaNegociacionReferencias</fullName>
        <active>true</active>
        <description>Valida registro de al menos una referencia para solicitud formalizada</description>
        <errorConditionFormula>AND(
	RecordType.DeveloperName = &apos;Simulacion_CORE&apos;,
	ISPICKVAL(StageName,&apos;Formalización&apos;),
        NOT( $Profile.Name = &apos;Integración&apos;),
	ValidaReferencias__c  = 0
)</errorConditionFormula>
        <errorMessage>Debe registrar al menos una referencia antes de formalizar.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VENTA6_ValidaEtapaNegociacionCuenta</fullName>
        <active>true</active>
        <description>Valida datos completos de cliente para solicitud formalizada</description>
        <errorConditionFormula>AND(
	RecordType.DeveloperName = &apos;Simulacion_CORE&apos;,
	ISPICKVAL(StageName,&apos;Formalización&apos;),
        NOT( $Profile.Name = &apos;Integración&apos;),
	Account.ValidaCuentaVenta__c
)</errorConditionFormula>
        <errorMessage>Debe completar todos los datos necesarios del cliente antes de formalizar la solicitud.</errorMessage>
    </validationRules>
</CustomObject>